# evalio

./: README.md  pyproject.toml
evalio/: english.py  evaluation.py  generate.py  perplexity.py  util.py
evalio/semantics/: __init__.py  semantics.py
examples/: deleteme.ipynb  evaluation.ipynb  generate.ipynb  perplexity.ipynb  semantics.ipynb
tests/: test_english.py  test_evaluation.py  test_llm_utils.py  test_semantics.py
