[tool.poetry]
name = "evalio"
version = "0.1.0"
description = ""
authors = ["'Gilad Barnea' <gilad.b@pecan.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = {version = "^0.4.0", optional = true}
pandas = {version = "^2.1.0", optional = true}
numpy = {version = "^1.25.2", optional = true}
betterprompt = {version = "^0.4.0", optional = true}


[tool.poetry.group.visualization.dependencies]
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
plotly = "^5.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
