[tool.poetry]
name = "evalio"
version = "0.1.2"
description = ""
authors = ["'Gilad Barnea' <giladbrn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
betterprompt = {version = "^0.4.0", optional = true}
openai = "0.27.10"
tiktoken = "^0.5.1"
pandas = "^2.1.1"
numpy = "^1.26.0"


[tool.poetry.group.visualization.dependencies]
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
plotly = "^5.16.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.9.1"}
pytest = "^7.4.2"
isort = "^5.12.0"
pylint = "^2.17.7"
poethepoet = "^0.24.0"

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.poe.tasks]
lint-fix = { shell = "black . && isort . " }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
